# mlproject

./: README.md  pyproject.toml
app/: constants.py  food.py  renderer.py  snake.py  state.py
app/grid/: cell.py  grid.py
backend/: pyproject.toml
backend/app/api/: deps.py  routes.py
backend/app/api/routers/: auth.py  reports.py  users.py
backend/app/core/: config.py  database.py  interfaces.py  security.py  server.py
backend/app/models/: report.py  user.py
backend/app/repositories/: report_repository.py  user_repository.py
backend/app/services/: auth_service.py  report_service.py  two_factor.py
backend/docs/: authentication.md
backend/tests/: conftest.py  mocks.py  test_auth.py
frontend/: package-lock.json  package.json
frontend/docs/: authentication_flow.md
frontend/src/app/: index.tsx  login.tsx
frontend/src/app/(tabs)/: _layout.tsx  account.tsx  explore.tsx  index.tsx  report.tsx
frontend/src/app/login/: two-fa.tsx
frontend/src/app/register/: basic-info.tsx  finalize.tsx  phone.tsx  verify-email.tsx  verify-phone.tsx
frontend/src/constants/: api.ts  authStyles.ts
frontend/src/services/: apiService.ts  authService.ts
frontend/src/utils/: validation.ts
